--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar{
     position: fixed;
-    width: 80px;
+    width: 89px;
     top: 70px;
     left: 0;
     bottom: 0;
@@ -14,11 +14,12 @@
 
 .sidebar-link{
     font-size: 11px;
-    height: 80px;
+    height: 88px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-inline: 5px ;
     cursor: pointer;
 }
 
@@ -29,6 +30,7 @@
 
 .sidebar-link:hover{
     background-color: rgb(239, 239, 239);
+    border-radius: 8px;
 }
 
 .sidebar-link img {
@@ -40,6 +42,10 @@
 @media (max-width: 600px){
     .sidebar{
         width: 60px;
+    }
+
+    .sidebar-link{
+        height: 70px;
     }
 
     .sidebar-link div{
