--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@ body {
     height: 100%;
 }
 
+a{
+    text-decoration: none;
+}
+
 @media (max-width: 600px) {
     body{
         padding-left: 4.5rem;
