--- a/styles/video.css
+++ b/styles/video.css
@@ -35,10 +35,18 @@
     margin-bottom: 10px;
 }
 
-.video-author{
+.video-title a{
+    color: black;
+}
+
+.video-author {
     font-size: 13px;
-    color: rgb(96, 96, 96);
     margin-bottom: 4px;
+}
+
+.video-author a{
+    color: rgb(96, 96, 96);
+
 }
 
 .video-stats{
